# xhec-mlops-project-student

./: .flake8  .gitignore  Dockerfile.app  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
.github/workflows/: ci.yaml
Abalone Model/: meta.yaml
Abalone Model/version-1/: meta.yaml
Abalone Model/version-2/: meta.yaml
mlruns/0/: meta.yaml
mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/: meta.yaml
mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/artifacts/model/: MLmodel
mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/metrics/: rmse
mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/params/: criterion
mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/585163062762099395/f20b203f6e3c4b278a4374b20a8af9e5/: meta.yaml
mlruns/585163062762099395/f20b203f6e3c4b278a4374b20a8af9e5/artifacts/model/: MLmodel  conda.yaml  requirements.txt
notebooks/: modelling.ipynb
notebooks/mlruns/585163062762099395/: meta.yaml
notebooks/mlruns/585163062762099395/0d856589ce7044099694cf74bceb4f95/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
notebooks/mlruns/585163062762099395/f20b203f6e3c4b278a4374b20a8af9e5/metrics/: rmse
notebooks/mlruns/models/Abalone Model/: meta.yaml
src/modelling/: deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py
src/web_service/lib/: inference.py  models.py  utils.py
(+3 files in other folders)
